--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,15 +2,44 @@
 <html>
     <head>
         <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
         <title>{% block title %}Welcome!{% endblock %}</title>
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
+
         {% block stylesheets %}
+            {{ encore_entry_link_tags('app') }}
         {% endblock %}
 
         {% block javascripts %}
+            {{ encore_entry_script_tags('app') }}
         {% endblock %}
     </head>
     <body>
-        {% block body %}{% endblock %}
+        <div class="AppFrame-main">
+            <div class="AppFrame-header-wrapper">
+                <div class="AppFrame-header color-bg-emphasis color-fg-on-emphasis">
+                    {% block header %}
+                        {{ include('base/header.html.twig') }}
+                    {% endblock %}
+                </div>
+                <div class="AppFrame-subheader">
+                    {% block subheader %}{% endblock %}
+                </div>
+            </div>
+            <div class="AppFrame-body pb-12">
+                {% block local_nav %}{% endblock %}
+                <div class="container-lg px-3 mt-5">
+                    {% block body %}{% endblock %}
+                </div>
+            </div>
+            {% block footer %}
+                <div class="AppFrame-footer color-bg-inset">
+                    <div class="container-lg p-3">
+                        &copy;2023 - Benjamin Wagner
+                    </div>
+                </div>
+            {% endblock %}
+        </div>
     </body>
 </html>
