--- a/templates/app/index.html.twig
+++ b/templates/app/index.html.twig
@@ -1,4 +1,4 @@
-{% extends '_admin.html.twig' %}
+{% extends 'base.html.twig' %}
 
 {% block body %}
     <div class="PageLayout">
@@ -7,45 +7,15 @@
                 <div class="PageLayout-header mb-5">
                     <div class=" d-flex flex-justify-between flex-items-baseline flex-wrap mb-5">
                         <div>
-                            <h1>Personenverzeichnis</h1>
-                            <h3>Datensätze auflisten</h3>
+                            <h1>Startseite</h1>
+                            <h3>Übersicht zu den Aktionen oder Login</h3>
                         </div>
                     </div>
-                    <table class="compact hover" id="example">
-                        <caption>Prüflinge</caption>
-                        <thead class="border-top">
-                        <tr class="border-bottom">
-                            <th class="TableObject-item text-left">Name</th>
-                            <th class="TableObject-item text-left">Vorname</th>
-                            <th class="TableObject-item text-right">Geburtsdatum</th>
-                            <th class="TableObject-item text-right">Abschlussjahr</th>
-                            <th class="TableObject-item text-left">Tutorium</th>
-                            <th class="TableObject-item text-right">Kursblock</th>
-                            <th class="TableObject-item text-right">Aktion</th>
-                        </tr>
-                        </thead>
-                        <tbody>
-                        <tr class="border-bottom">
-                            <td class="TableObject-item">Wagner</td>
-                            <td class="TableObject-item">Benjamin</td>
-                            <td class="TableObject-item text-right">16.02.1987</td>
-                            <td class="TableObject-item text-right">2024</td>
-                            <td class="TableObject-item">Kottwitz</td>
-                            <td class="TableObject-item text-right">412</td>
-                            <td class="TableObject-item text-right">
-                                <div class="BtnGroup">
-                                    <a href="#" class="btn btn-sm btn-octicon BtnGroup-item"><i class="cil-pen"></i></a>
-                                    <a href="#" class="btn btn-sm btn-octicon BtnGroup-item"><i class="cil-calculator"></i></a>
-                                </div>
-                            </td>
-                        </tr>
-                        </tbody>
-                    </table>
                 </div>
             </div>
             <div class="col-12 col-lg-7 float-left">
                 <div class="PageLayout-content">
-                        <a href="{{ url('app_new') }}" class="btn btn-primary btn-icon"><i class="cil-plus mr-1"></i> Neuer Datensatz</a>
+
                 </div>
             </div>
             <div class="col-12 col-lg-5 float-left">
