update entities and layout

--- a/templates/_admin.html.twig
+++ b/templates/_admin.html.twig
@@ -12,7 +12,7 @@
                 <a class="UnderlineNav-item"><i class="cil-cloud-download mr-1"></i>Export</a>
             </div>
             <div class="UnderlineNav-actions">
-                <a href="{{ url('app_teacher_crud_index') }}" class="UnderlineNav-item"{{ local_nav == 'settings' ? 'aria-current="true"' : '' }}><i class="cil-settings mr-1"></i>Einstellungen</a>
+                <a href="{{ url('app_setup') }}" class="UnderlineNav-item"{{ local_nav == 'settings' ? 'aria-current="true"' : '' }}><i class="cil-settings mr-1"></i>Einstellungen</a>
             </div>
         </div>
     </nav>
