--- a/templates/pupil_crud/index.html.twig
+++ b/templates/pupil_crud/index.html.twig
@@ -33,10 +33,8 @@
                             <td class="TableObject-item">Kottwitz</td>
                             <td class="TableObject-item text-right">412</td>
                             <td class="TableObject-item text-right">
-                                <div class="BtnGroup">
-                                    <a href="#" class="btn btn-sm btn-octicon BtnGroup-item"><i class="cil-pen"></i></a>
-                                    <a href="#" class="btn btn-sm btn-octicon BtnGroup-item"><i class="cil-calculator"></i></a>
-                                </div>
+                                    <a href="#" class="">anzeigen</a>
+                                    <a href="#" class="">bearbeiten</a>
                             </td>
                         </tr>
                         </tbody>
