--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -4,3 +4,24 @@
 @import "~datatables.net-dt/css/jquery.dataTables.min.css";
 @import "~bootstrap-icons";
 
+html,body{
+  min-height: 100%;
+  height: 100%;
+}
+
+@media (min-width: 720px) {
+  .stick-to-top {
+    position: sticky;
+    top: 48px;
+  }
+
+
+}
+
+.AppFrame-footer{
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+}
+
