--- a/templates/teacher_crud/edit.html.twig
+++ b/templates/teacher_crud/edit.html.twig
@@ -5,9 +5,7 @@
 {% block body %}
     <h1>Edit Teacher</h1>
 
-    {{ include('teacher_crud/_form.html.twig', {'button_label': 'Update'}) }}
-
-    <a href="{{ path('app_teacher_crud_index') }}">back to list</a>
+    {{ include('teacher_crud/_form.html.twig', {'button_label': 'Aktualisieren'}) }}
 
     {{ include('teacher_crud/_delete_form.html.twig') }}
 {% endblock %}
