--- a/templates/app/setup.html.twig
+++ b/templates/app/setup.html.twig
@@ -8,7 +8,7 @@
     </div>
 
     <div class="SideNav">
-        <a href="#" class="SideNav-item">
+        <a href="{{ url('app_user_crud_index') }}" class="SideNav-item">
             <i class="cil cil-user SideNav-icon"></i>
             Benutzerkonten
         </a>
@@ -16,7 +16,7 @@
             <i class="cil cil-school SideNav-icon"></i>
             Lehrkräfte
         </a>
-        <a href="#" class="SideNav-item">
+        <a href="{{ url('app_grade_index') }}" class="SideNav-item">
             <i class="cil cil-excerpt SideNav-icon"></i>
             Punktetabellen
         </a>
