--- a/templates/base/alert.html.twig
+++ b/templates/base/alert.html.twig
@@ -1,6 +1,6 @@
-<div class="Box Box--condensed Box-body Box--danger color-bg-danger mb-5">
+<div class="Box Box--condensed Box-body form-warning mb-5">
     <div class="d-flex flex-justify-start flex-items-center">
-        <i class="cil-bell-exclamation color-fg-danger d-block mr-2" style="font-size: 1.2rem"></i>
-        <span class="color-fg-danger">{{ text ?? '' }}</span>
+        <i class="cil-bell-exclamation d-block mr-2" style="font-size: 1.2rem"></i>
+        <span>{{ text ?? '' }}</span>
     </div>
 </div>
