--- a/templates/user_crud/edit_password.html.twig
+++ b/templates/user_crud/edit_password.html.twig
@@ -1,6 +1,6 @@
 {% extends '_admin.html.twig' %}
 
-{% block title %}Lehrkraft bearbeiten{% endblock %}
+{% block title %}Edit User{% endblock %}
 
 {% block sidebar %}
     <div class="p-3">
@@ -8,11 +8,11 @@
     </div>
 
     <div class="SideNav">
-        <a href="{{ url('app_user_crud_index') }}" class="SideNav-item">
+        <a href="{{ url('app_user_crud_index') }}" class="SideNav-item" aria-current="true">
             <i class="cil cil-user SideNav-icon"></i>
             Benutzerkonten
         </a>
-        <a href="{{ url('app_teacher_crud_index') }}" class="SideNav-item" aria-current="true">
+        <a href="{{ url('app_teacher_crud_index') }}" class="SideNav-item">
             <i class="cil cil-school SideNav-icon"></i>
             Lehrkräfte
         </a>
@@ -27,30 +27,29 @@
     <div class="PageLayout">
         <div class="clearfix gutter">
             <div class="col-12 float-left">
-                <div class="PageLayout-header">
+                <div class="PageLayout-header mb-5">
                     <div class=" d-flex flex-justify-between flex-items-baseline flex-wrap mb-5">
                         <div>
-                            <h1>{{ teacher }} bearbeiten</h1>
+                            <h1>Passwort von {{ user }} bearbeiten</h1>
                             <h3>Systemkonfiguration</h3>
-                        </div>
-                        <div class="BtnGroup d-none d-lg-block">
-                            <a href="#" class="BtnGroup-item btn"><i class="cil-print"></i></a>
-                            <a href="#" class="BtnGroup-item btn"><i class="cil-file"></i></a>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="col-12 col-lg-7 float-left">
                 <div class="PageLayout-content">
-                    {{ include('teacher_crud/_form.html.twig', {'button_label': 'Aktualisieren'}) }}
+                    {% if app.user is same as user %}
+                        {{ include('base/alert.html.twig',{'text':'Dies ist Ihr Benutzerkonto. Nach Speichern der Änderungen werden Sie ggf. automatisch ausgeloggt.'}) }}
+                    {% endif %}
+                    {{ include('user_crud/_form_password.html.twig', {'button_label': 'Aktualisieren'}) }}
                 </div>
             </div>
             <div class="col-12 col-lg-5 float-left">
                 <div class="PageLayout-pane">
+
                 </div>
             </div>
             <div class="col-12 float-left">
-
             </div>
         </div>
     </div>
