--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -4,24 +4,69 @@
 @import "~datatables.net-dt/css/jquery.dataTables.min.css";
 @import "~bootstrap-icons";
 
-html,body{
-  min-height: 100%;
-  height: 100%;
+
+
+table.hovering tbody tr:hover {
+  background-color:  #f6f8fa!important;
+  color: var(--fgColor-accent, var(--color-accent-fg));
 }
 
-@media (min-width: 720px) {
-  .stick-to-top {
-    position: sticky;
-    top: 48px;
+  html,body{
+    min-height: 100%;
+    height: 100%;
+  }
+
+  @media (min-width: 720px) {
+    .stick-to-top {
+      position: sticky;
+      top: 48px;
+    }
+
+
+  }
+
+  .AppFrame-footer{
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+  }
+
+  form label.required:after
+  {
+    color: #FF0000;
+    content: " *";
+  }
+
+  .invalid-feedback{
+    display: none;
   }
 
 
+
+  .was-validated:has(.invalid-feedback){
+    .form-control:invalid + .invalid-feedback {
+      display:block!important;
+    }
+  }
+
+.ws-dropdown {
+  position: relative!important;
+  display: inline-block!important;
 }
 
-.AppFrame-footer{
-  position: fixed;
-  left: 0;
-  bottom: 0;
-  width: 100%;
+.ws-dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  padding: 12px 16px;
+  z-index: 11000;
 }
+
+.ws-dropdown:hover .ws-dropdown-content {
+  display: block!important;
+}
+
 
