--- a/templates/grade/_form.html.twig
+++ b/templates/grade/_form.html.twig
@@ -1,33 +1,46 @@
 {{ form_start(form,{'attr':{'class':'needs-validation','novalidate':'novaldiate'}}) }}
 
-<h4 class="border-bottom mt-5">Persönliche Daten</h4>
+<div class="form-group">
+    <div class="form-group-header">
+        {{ form_label(form.grade) }}
+    </div>
+    <div class="form-group-body">
+        {{ form_widget(form.grade) }}
+        <div class="invalid-feedback color-fg-danger my-2">
+            Bitte Schulnote angeben.
+        </div>
+    </div>
+</div>
 
 <div class="form-group">
     <div class="form-group-header">
-        {{ form_label(form.firstname,form.firstname,{'label_attr': {'class':'required'} }) }}
+        {{ form_label(form.min) }}
     </div>
     <div class="form-group-body">
-        {{ form_widget(form.firstname,{'attr': {'class':'form-control width-full'} }) }}
+        {{ form_widget(form.min) }}
         <div class="invalid-feedback color-fg-danger my-2">
-            Bitte Vornamen der Lehrkraft angeben.
+            Bitte Mindestpunktzahl angeben.
         </div>
     </div>
 </div>
+
 <div class="form-group">
     <div class="form-group-header">
-        {{ form_label(form.lastname,form.lastname,{'label_attr': {'class':'required'} }) }}
+        {{ form_label(form.max) }}
     </div>
     <div class="form-group-body">
-        {{ form_widget(form.lastname,{'attr': {'class':'form-control width-full'} }) }}
+        {{ form_widget(form.max) }}
         <div class="invalid-feedback color-fg-danger my-2">
-            Bitte Nachnamen der Lehrkraft angeben.
+            Bitte Maximalpunktzahl angeben.
         </div>
     </div>
 </div>
+
 <div class="form-group mt-5">
     <div class="form-group-body">
         <button class="btn btn-outline mr-2">{{ button_label|default('Speichern') }}</button>
-        <a class="btn" href="{{ path('app_teacher_crud_index') }}">Zurück zur Übersicht</a>
+        <a class="btn" href="{{ path('app_grade_index') }}">Zurück zur Übersicht</a>
     </div>
 </div>
+
 {{ form_end(form) }}
