--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -12,32 +12,39 @@
                             <h1>Bitte anmelden</h1>
                         </div>
                     </div>
-                    {% if error %}
-                        {% include 'base/alert.html.twig' with {'text':error.messageKey|trans(error.messageData, 'security')} %}
-                    {% endif %}
                 </div>
             </div>
             <div class="col-12 col-lg-7 float-left">
                 <div class="PageLayout-content">
-                    <form class="mb-5" id="form" method="post">
+                    {% if error %}
+                        {% include 'base/alert.html.twig' with {'text':error.messageKey|trans(error.messageData, 'security')} %}
+                    {% endif %}
+
+                    <form class="mb-5 needs-validation" id="form" method="post" novalidate>
 
                         <h4 class="border-bottom">Anmeldeinformationen</h4>
 
                         <div class="form-group">
                             <div class="form-group-header">
-                                <label for="inputUsername">Kennung</label>
+                                <label class="required" for="inputUsername">Kennung</label>
                             </div>
                             <div class="form-group-body">
-                                <input type="text" value="{{ last_username }}" name="username" id="inputUsername" class="form-control" autocomplete="username" required autofocus>
+                                <input type="text" value="{{ last_username }}" name="username" id="inputUsername" class="form-control width-full" autocomplete="username" required autofocus>
+                                <div class="invalid-feedback color-fg-danger my-2">
+                                    Bitte Benutzerkennung angeben.
+                                </div>
                             </div>
                         </div>
 
                         <div class="form-group">
                             <div class="form-group-header">
-                                <label for="inputPassword">Passwort</label>
+                                <label class="required" for="inputPassword">Passwort</label>
                             </div>
                             <div class="form-group-body">
-                                <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
+                                <input type="password" name="password" id="inputPassword" class="form-control width-full" autocomplete="current-password" required>
+                                <div class="invalid-feedback color-fg-danger my-2">
+                                    Bitte Passwort angeben.
+                                </div>
                             </div>
                         </div>
 
