--- a/templates/teacher_crud/_delete_form.html.twig
+++ b/templates/teacher_crud/_delete_form.html.twig
@@ -1,4 +1,4 @@
-<form method="post" action="{{ path('app_teacher_crud_delete', {'id': teacher.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+<form method="post" class="d-inline-block" action="{{ path('app_teacher_crud_delete', {'id': teacher.id}) }}" onsubmit="return confirm('Möchten Sie wirklich diesen Eintrag löschen?');">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ teacher.id) }}">
-    <button class="btn btn-danger">Löschen</button>
+    <button class="btn-link color-fg-danger">löschen</button>
 </form>
